--- a/examples/todos/package.json
+++ b/examples/todos/package.json
@@ -9,9 +9,7 @@
   },
   "dependencies": {
     "react": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "react-dom": "^15.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
