--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todos",
+  "name": "basic",
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
@@ -8,11 +8,8 @@
     "react-scripts": "^0.4.0"
   },
   "dependencies": {
-    "modelux": "0.0.3",
     "react": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "react-dom": "^15.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
