--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -8,6 +8,7 @@
     "react-scripts": "^0.4.0"
   },
   "dependencies": {
+    "delay": "^1.3.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
   },
