--- a/examples/counterGame/package.json
+++ b/examples/counterGame/package.json
@@ -11,8 +11,7 @@
     "delay": "^1.3.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
-    "redux": "^3.6.0",
-    "redux-devtools-extension": "^1.0.0"
+    "redux": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
